# llvm-unroller

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/sha256/: .gitignore  Makefile  sha256.c  sha256.h  test.c
examples/sum100/: .gitignore  Makefile  kernel.c  kernel.h  main.c
include/unroller/: instrumenter.h
src/: instrumenter.cpp  linearizer.cpp  linearizer.h  main.cpp  utils.h
